prevent portrait image from overflowing

--- a/src/custom.css
+++ b/src/custom.css
@@ -155,8 +155,8 @@ div {
 .portrait {
   box-sizing: border-box;
   align-self: center;
-  max-width: 90%;
-  height: auto;
+  max-width: 85%;
+  max-height: 85%;
   display: block;
   margin: 1rem auto;
   border-radius: 50%;
